# Binary-Image-Segmentation

./: README.md  config.txt
__MACOSX/code/: ._CMakeLists.txt  ._README
__MACOSX/code/assets/: ._config.txt
__MACOSX/code/src/: ._main.cpp
code/: CMakeLists.txt  README  lab_config.sh
code/assets/: config.txt
code/src/: main.cpp
